--- a/.github/workflows/dev-ci.yaml
+++ b/.github/workflows/dev-ci.yaml
@@ -45,4 +45,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Deploy package
-        run: echo package deployed
+        run: sleep 60
