--- a/.github/workflows/dev-ci.yaml
+++ b/.github/workflows/dev-ci.yaml
@@ -35,6 +35,7 @@ jobs:
           echo test, and deploy your project.
 
   deploy:
+    needs: build
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
